@@ -98,7 +98,7 @@ Automake 1.1p --- a system for automatically generating Makefiles that
 	`guile.m4' from the top directory of the Guile core disty to
 	`/usr/local/share/aclocal.
 
-libtool 0.9h --- a system for managing the zillion hairy options needed
+libtool 1.0c --- a system for managing the zillion hairy options needed
 	on various systems to produce shared libraries.  Available in
 	"ftp://alpha.gnu.ai.mit.edu/gnu".
 
